--- a/product-api/src/main/resources/application.yml
+++ b/product-api/src/main/resources/application.yml
@@ -2,6 +2,12 @@ server:
   port: ${PORT:8081}
 
 spring:
+
+
+  main:
+    allow-bean-definition-overriding: true
+
+
   application:
     name: product-api
 
@@ -25,6 +31,27 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQL9Dialect
+  rabbitmq:
+    host: ${RABBIT_MQ_HOST:localhost}
+    port: ${RABBIT_MQ_HOST:5672}
+    username: ${RABBIT_MQ_HOST:guest}
+    password: ${RABBIT_MQ_HOST:guest}
+
+app-config:
+  secrets:
+    api-secret: ${API_SECRET:RabbitSALES}
+
+  rabbit:
+    exchange:
+      product: product.topic
+
+    routingKey:
+      product-stock: product-stock-update.routingKey
+      sales-confirmation: sales-confirmation.routingKey
+
+    queue:
+      product-stock: product-stock-update.queue
+      sales-confirmation: sales-confirmation.queue
 
 
 
