Feign Client finished!

--- a/product-api/src/main/resources/application.yml
+++ b/product-api/src/main/resources/application.yml
@@ -38,6 +38,11 @@ spring:
     password: ${RABBIT_MQ_HOST:guest}
 
 app-config:
+
+  services:
+    sales: http://${SALES_HOST:localhost}:${SALES_PORT:8082}
+
+
   secrets:
     api-secret: ${API_SECRET:RabbitSALES}
 
